# ScipBaseSuite

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: build_and_test.yml
